gh1_folders/artifacts/paper/v1.14/claim-audit.md
# v1.13 Claim Audit

Status: `passed`

## Corrected Headline Counts

- Verification-passed rows: `9`
- Trained exact recovery rows: `8`
- Compile-only verified support rows: `1`
- Unsupported rows: `15`
- Failed rows: `0`

| Check | Status |
|-------|--------|
| paper_track_aggregate_present | passed |
| paper_track_rows_have_no_execution_failures | passed |
| track_denominators_present | passed |
| recovered_rows_have_verifier_evidence | passed |
| recovered_rows_have_track_labels | passed |
| recovered_rows_have_source_artifacts | passed |
| recovered_rows_have_final_confirmation_or_substitute | passed |
| compile_only_excluded_from_trained_recovery | passed |
| paper_track_corrected_headline_counts | passed |
| baseline_context_present | passed |
| baseline_rows_expose_quarantine_fields | passed |
| baseline_main_surface_claims_quarantined | passed |

## Recovered Claims

- `v1-13-paper-tracks-exp-literal-warm-9b23eed6fa6a`: exp / literal_constants / literal_constants / dense_adversarial_verifier_substitute
- `v1-13-paper-tracks-radioactive-decay-literal-warm-2c95fb8d28a3`: radioactive_decay / literal_constants / literal_constants / dense_adversarial_verifier_substitute
- `v1-13-paper-tracks-beer-lambert-literal-warm-6bde0341b85f`: beer_lambert / literal_constants / literal_constants / dense_adversarial_verifier_substitute
- `v1-13-paper-tracks-scaled-exp-growth-literal-warm-de37e614d838`: scaled_exp_growth / literal_constants / literal_constants / dense_adversarial_verifier_substitute
- `v1-13-paper-tracks-scaled-exp-fast-decay-literal-warm-2ec985eec55a`: scaled_exp_fast_decay / literal_constants / literal_constants / dense_adversarial_verifier_substitute
- `v1-13-paper-tracks-arrhenius-literal-warm-b1aea4d7678e`: arrhenius / literal_constants / literal_constants / dense_adversarial_verifier_substitute
- `v1-13-paper-tracks-michaelis-menten-literal-warm-a45fcb5297df`: michaelis_menten / literal_constants / literal_constants / dense_adversarial_verifier_substitute
- `v1-13-paper-tracks-shockley-literal-warm-99701f065be5`: shockley / literal_constants / literal_constants / dense_adversarial_verifier_substitute

## Compile-only Verified Support

- `v1-13-paper-tracks-exp-basis-only-compile-3063b13aa4e5`: exp / basis_only / basis_only / dense_adversarial_verifier_substitute

## Baseline Quarantine

- Policy: `quarantined_appendix_or_future_work_only`
- Main-surface comparison claim: `False`
- Eligible external rows: `0`
- Unavailable rows: `40`
- Unsupported rows: `30`
